Fix monthly income not showing correctly

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,3 +25,7 @@
 .date-label {
     width: 145px;
 }
+
+.custom-link:hover{
+    text-decoration: underline;
+}
